syntax = "proto3";

package auth;

option go_package = "./internal/auth/pb";

service AuthService {
  rpc SignUp(SignUpRequest) returns (SignUpResponse){}
  rpc SignIn(SignInRequest) returns (SignInResponse){}
}

//SignUp

message SignUpRequest {
  int64 phoneNumber = 1;
  string password = 2;
  string name = 3;
  string surname = 4;
  string dateOfBirth = 5;
}

message SignUpResponse {
  int64 status = 1;
  string error = 2;
}

//SignIn

message SignInRequest {
  int64 phoneNumber = 1;
  string password = 2;
}

message SignInResponse {
  int64 status = 1;
  string error = 2;
  string token = 3;
}